...
                                        <connections>
                                            <action selector="loadFeaturesButtonDidTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Wwh-Pj-jf6"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dxc-Tz-myF">
                                        <rect key="frame" x="0.0" y="45" width="283" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="load_enable_features"/>
                                        <state key="normal" title="Load &amp; Enable All Features"/>
                                        <connections>
                                            <action selector="LoadEnableAllFeaturesButtonDidTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wIG-aN-XDP"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zY2-LM-jTQ">
...
                            <constraint firstItem="ixX-lA-Z46" firstAttribute="top" secondItem="jUs-wh-ttf" secondAttribute="bottom" constant="80" id="a7G-hH-gME"/>
                            <constraint firstAttribute="trailingMargin" secondItem="jUs-wh-ttf" secondAttribute="trailing" constant="30" id="dvy-pp-tRc"/>
                            <constraint firstAttribute="trailingMargin" secondItem="ixX-lA-Z46" secondAttribute="trailing" constant="30" id="lcz-Au-lMq"/>
                            <constraint firstItem="ixX-lA-Z46" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="30" id="sna-e2-PY8"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="SwiftyToggler-Example" id="eJP-Ce-q0j">
                        <barButtonItem key="backBarButtonItem" title="Back" id="UNP-mZ-1fz"/>
                    </navigationItem>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="97" y="63"/>
...
